// Copyright (c) Microsoft Corporation.
// Licensed under the Apache v2.0 license.

syntax = "proto3";
option go_package = "github.com/microsoft/moc/rpc/nodeagent/network";
package moc.nodeagent.network;

import "google/protobuf/wrappers.proto";
import "common.proto";


message LoadBalancerRequest {
	repeated LoadBalancer LoadBalancers = 1;
	Operation OperationType = 2;
}

message LoadBalancerResponse {
	repeated LoadBalancer LoadBalancers = 1;
	google.protobuf.BoolValue Result = 2;
	string  Error = 3;
}

message LoadBalancer {
	string name = 1;
	string id = 2;
	string frontendip = 4;
	string backendpoolname = 5;
	string networkid = 6;
	Status status = 8;
	Entity entity = 9;
	Tags tags = 10;
}

service LoadBalancerAgent {
	rpc Invoke(LoadBalancerRequest) returns (LoadBalancerResponse) {}
}

